src/test/resources/tests/run-pass/semck/use-from-parent-scope.rs
fn main() {
    let a = 0;

    if true {
        a += 1;
    }

    println(a);
}