src/test/resources/tests/compile-fail/semck/redeclare-var.rs
fn main() {
    let a = 0;
    let a = 1;  //! ERROR(3:9): cannot redeclare `a`
}